[feat] : oAuth2 API 관련 로직 추가

--- a/src/main/resources/templates/setNickname.html
+++ b/src/main/resources/templates/setNickname.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <h2>닉네임 설정</h2>
-    <form action="/register/setNickname" method="POST">
+    <form action="/register/setNicknameProc" method="POST">
         <input type="hidden" id="email" name="email" th:value="${email}">
         <div class="form-group">
             <label for="nickname">닉네임 :</label>
